--- a/style.css
+++ b/style.css
@@ -25,3 +25,81 @@ h1 {
 }
 
 /* Add more styles here as needed */
+
+body {
+    font-family: Arial,sans-serif;
+    background-color: #dec7c7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container {
+   text-align: center;
+   background-color: #ffffff; 
+   padding: 30px;
+   border-radius: 15px;
+   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+   max-width: 400px;
+   width: 100%;
+
+}
+
+h1 {
+    font-family: 2.2em;
+    margin-bottom: 20px;
+    color: #000;
+}
+
+input[type="number"]{
+    margin-bottom: 15px;
+    padding: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+    
+}
+
+button {
+    padding: 12px 20px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 100%;
+}
+
+#passwordoutput{
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
+}
+
+.checkbox-container input{
+    margin-bottom: 15px;
+    font-size: 16px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+}
+
+.checkbox-container input{
+    margin-right: 10px;
+
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #acc;
+    border-radius: 5px;
+    margin-top: 15px;
+    
+}
